Voting-App/1-vote-pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: vote-app
  labels:
    app: vote-app
    appType: voting-app
spec:
  containers:
    - name: vote-app
      image: saurabhd2106/vote-app
      ports:
        - containerPort: 80
