Voting-App/2-redis-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis-app
  labels:
    app: redis-app
    appType: voting-app
spec:
  containers:
    - name: redis-app
      image: redis:alpine
      ports:
        - containerPort: 6379
