Voting-App/3-result-app-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: result-app
  labels:
    app: result-app
    appType: voting-app
spec:
  containers:
    - name: result-app
      image: saurabhd2106/result-app
      ports:
        - containerPort: 80
