Voting-App/4-postgres-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-app
  labels:
    app: postgres-app
    appType: voting-app
spec:
  containers:
    - name: postgres-app
      image: postgres:9.4
      ports:
        - containerPort: 5432
