Voting-App/5-worker-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: worker-app
  labels:
    app: worker-app
    appType: voting-app
spec:
  containers:
    - name: worker-app
      image: saurabhd2106/worker-app
