Voting-App/7-redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis-service
    appType: voting-app
spec:
  selector:
    appType: voting-app
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
