Voting-App/8-vote-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  labels:
    app: vote-service
    appType: voting-app
spec:
  type: NodePort
  selector:
    appType: voting-app
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 31232
